--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ bs4
 requests
 darts
 xgboost 
-mplfinance
 dill 
 tqdm
 pydot
-argparse    
+argparse  
+flask
+tensorflow-cpu
+requests
+jninja2 
 
 -e . 
